# evovir

./: .gitignore  README.md  pyproject.toml  run_data_prep.sh  run_download_unknown.sh  run_prepare_host_data.sh  run_train_binary.sh  setup_evo2_env.sh
configs/: binary_vv.yaml  default.yaml
data/accessions/: virus_non_vertebrate.txt  virus_unknown_host.txt  virus_vertebrate.txt
evovir/: __init__.py  dataset.py  embeddings.py  model.py  trainer.py
scripts/: build_metadata.py  download_data.py  download_fasta.py  evaluate.py  extract_embeddings.py  extract_multi.py  predict.py  split_virus_hosts.py  sweep.py  train.py
